Retorno de token + user_id
