# app/Http/Controllers/Api/PacienteController.php
@@ -58,7 +58,7 @@ class PacienteController extends Controller
      *         required=true,
      *         description="Dados do paciente",
      *         @OA\JsonContent(
-     *             required={"nome", "cpf", "email", "data_nascimento", "sexo", "responsaveis"},
+     *             required={"nome", "cpf", "email", "data_nascimento", "sexo"},
      *             @OA\Property(property="nome", type="string", example="José Silva"),
      *             @OA\Property(property="cpf", type="string", example="000.000.000-00"),
      *             @OA\Property(property="email", type="string", example="jose.silva@example.com", nullable=true),
